[LFC][IFC] Fix fast/block/float/018.html https://bugs.webkit.org/show_bug.cgi?id=244566

Reviewed by Antti Koivisto.

Sometimes the float box does not fit the current line.

* Source/WebCore/layout/formattingContexts/inline/InlineLineBuilder.cpp:
(WebCore::Layout::LineBuilder::placeInlineContent):
(WebCore::Layout::LineBuilder::handleFloatContent):
* Source/WebCore/layout/formattingContexts/inline/InlineLineBuilder.h:
* Source/WebCore/layout/integration/LayoutIntegrationCoverage.cpp:

Canonical link: https://commits.webkit.org/254009@main